Обновлен путь к иконке и удален fav.png
- Обновлены ссылки на иконку в нескольких XAML файлах с `fav.png` на `Images/fav.png` в `MainWindow.xaml`, `DatabaseSettingsWindow.xaml` и `LoginWindow.xaml`.
- Изменен отступ `StackPanel` в `AddDebtorWindow.xaml` с `Margin="-12,0,20,0"` на `Margin="-12,0,27,0"`.
- Удален ресурс `fav.png` из файла проекта `bankrupt-piterjust.csproj`, добавлена новая запись для `Images/fav.png`, что указывает на реорганизацию управления ресурсами.
- Удален бинарный файл `fav.png` из проекта.

--- a/Views/AddDebtorWindow.xaml
+++ b/Views/AddDebtorWindow.xaml
@@ -412,9 +412,9 @@
                                     <ColumnDefinition Width="395*"/>
                                     <ColumnDefinition Width="398*"/>
                                 </Grid.ColumnDefinitions>
-                                <StackPanel Grid.Column="0" Margin="-12,0,20,0">
+                                <StackPanel Grid.Column="0" Margin="-12,0,27,0">
                                     <TextBlock Text="Вознаграждение фин. управляющего (руб.)" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding ManagerFee}" Style="{StaticResource FormTextBox}" Width="384"/>
+                                    <TextBox Text="{Binding ManagerFee}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                                 <StackPanel Grid.ColumnSpan="2" Margin="390,0,0,0">
                                     <TextBlock Text="Прочие расходы (руб.)" Style="{StaticResource FormTextBlock}"/>
