--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,7 @@
         Title="ПитерЮст. Банкротство." Height="720" Width="1280"
         Background="#F8F9FA"
         FontFamily="Segoe UI"
-        MinWidth="800" MinHeight="600" Icon="/fav.png">
+        MinWidth="800" MinHeight="600" Icon="/Images/fav.png">
 
     <Window.DataContext>
         <!-- Подключаем ViewModel -->
