Удалены старые иконки, добавлена новая
- Удален бинарный файл `fav.png`.
- В `MainWindow.xaml` иконка изменена с `fav.png` на `icon.png`.
- В `AddDebtorWindow.xaml` иконка также изменена с `fav.png` на `icon.png`.
- В `DatabaseSettingsWindow.xaml` иконка обновлена с `fav.png` на `icon.png`, цвет фона остался прежним.
- В `LoginWindow.xaml` иконка изменена с `fav.png` на `icon.png`, изменен порядок атрибутов `Background` и `KeyDown`.
- В проекте `bankrupt-piterjust.csproj` удалена ссылка на `fav.png`, добавлен новый ресурс для `icon.png`.
- Добавлен новый ресурс для `icon.png` в отдельной группе элементов в проекте.
- Добавлен новый бинарный файл `icon.png`, содержащий данные изображения.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,7 @@
         Title="ПитерЮст. Банкротство." Height="720" Width="1280"
         Background="#F8F9FA"
         FontFamily="Segoe UI"
-        MinWidth="800" MinHeight="600" Icon="/Images/fav.png">
+        MinWidth="800" MinHeight="600" Icon="/Images/icon.png">
 
     <Window.DataContext>
         <!-- Подключаем ViewModel -->
